# Pixiv-MultiPlatform

./: .editorconfig  .gitignore  .inscode  Pixiv-MultiPlatform.desktop  README.md  README_EN.md  build.gradle.kts  gradle.properties  settings.gradle.kts  sort_strings_xml.py
.aur/: .gitignore  Pixiv-MultiPlatform.desktop
.aur/pixiv-multiplatform/: generate.sh
.aur/pixiv-multiplatform-git/: generate.sh
.fleet/: receipt.json
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  功能建议.md  功能故障.md
.github/actions/install-base-environment/: action.yml
.github/workflows/: ci.yaml  macos-build.yml  publish-release.yml
AUR/pixiv-multiplatform-bin/: PKGBUILD  PKGBUILD.part1  Pixiv-MultiPlatform.desktop  build.fish
AUR/pixiv-multiplatform-git/: PKGBUILD
composeApp/: app.jks  build.gradle.kts  core-rules.pro  default-compose-desktop-rules.pro  desktop-rules.pro  proguard-rules.pro
composeApp/icons/: pixiv.icns
composeApp/schemas/top.kagg886.pmf.backend.database.AppDatabase/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/top/kagg886/pmf/: App.android.kt  CrashActivity.kt  MainActivity.kt  PMFApplication.kt
composeApp/src/androidMain/res/xml/: file_paths.xml
composeApp/src/commonMain/composeResources/files/: aboutlibraries.json
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-en/: strings.xml
composeApp/src/commonMain/composeResources/values-zh-rTW/: string.xml
composeApp/src/commonMain/kotlin/top/kagg886/epub/: epub.kt
composeApp/src/commonMain/kotlin/top/kagg886/pmf/: App.kt  Theme.kt
composeApp/src/commonTest/kotlin/: ByteReadChannelReadTest.kt  CollapseColumnTest.kt  ColorTest.kt  DateTimeTest.kt  EnumTest.kt  EpubTest.kt  GalleryOptionsTest.kt  GithubTest.kt  OkioTest.kt  RepositoryTest.kt  WelcomeGUITest.kt  WrapperTest.kt
composeApp/src/desktopTest/kotlin/: CollapseV2Screen.kt  UITest.kt
composeApp/src/iosTest/kotlin/: NetworkTest.kt  ZipTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/Pixiv-MultiPlatform/: Info.plist  Pixiv_MultiPlatformApp.swift
iosApp/Pixiv-MultiPlatform.xcodeproj/: project.pbxproj
iosApp/Pixiv-MultiPlatform/Assets.xcassets/AppIcon.appiconset/: Contents.json
iosApp/iosApp/: ContentView.swift  Info.plist  iosAppApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosAppTests/: iosAppTests.swift
iosApp/iosAppUITests/: iosAppUITests.swift  iosAppUITestsLaunchTests.swift
lib/chip-text-field/: README.md  build.gradle.kts
lib/compose-settings/: README.md  build.gradle.kts
lib/epub/: README.md  build.gradle.kts
lib/file-picker/: build.gradle.kts
lib/file-picker/src/jvmTest/kotlin/: TestFilePicker.kt
lib/file-picker/src/rust/: CMakeLists.txt  Cargo.toml
lib/file-picker/src/rust/src/: jvm.rs
lib/gif/: README.md  build.gradle.kts
lib/gif/src/commonTest/kotlin/: GIFCommonTest.kt  GIFEncoderTest.kt
lib/gif/src/iosMain/interop/: libgif_rust.def
lib/gif/src/iosMain/interop/include/: gif_rust.h
lib/gif/src/jvmTest/kotlin/: GIFTest.kt
lib/gif/src/linuxX64Test/kotlin/: GifEncoder.native.kt
lib/gif/src/nativeMain/interop/: libgif_rust.def
lib/gif/src/rust/: CMakeLists.txt  Cargo.toml  kniwrapper.c  rustfmt.toml
lib/gif/src/rust/src/: jvm.rs  lib.rs
lib/multiplatform-serializer-fix/: README.md  build.gradle.kts
lib/okio-enhancement-util/: build.gradle.kts
plugin/compose-desktop-build-windows/: README.md  build.gradle.kts
plugin/compose-desktop-build-windows/src/main/kotlin/: wix.gradle.kts
(+290 files in other folders)
