[package]
name = "gif_encoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
image = { default-features = false, version = "0.25", features = ["png", "gif", "jpeg"] }
serde_cbor = "0.11"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
